Readme & Bug Fixes

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "testGenerator": "node -e 'require(\"./dist/index\").generate({ safe: false })'"
+    "testGenerator": "node -e 'require(\"./dist/index\").generate({ safe: false, test: true })'"
   },
   "author": "TurtIeSocks",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/extend": "^3.0.1",
     "axios": "^0.21.1",
+    "extend": "^3.0.2",
     "pogo-protos": "github:Furtif/pogo-protos"
   }
 }
