--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pogo-protos": "github:Furtif/pogo-protos"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "jest": "^27.0.6"
   }
 }
