--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pogo-data-generator",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Pokemon GO project data generator",
   "author": "TurtIeSocks",
   "license": "Apache-2.0",
@@ -18,7 +18,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "local": "node -e 'require(\"./dist/index\").generate({ test: true })'",
+    "generate": "node -e 'require(\"./dist/index\").generate({ test: true })'",
     "test": "./node_modules/.bin/jest"
   },
   "repository": {
