Save PokeAPI Locally
- Now saves PokeAPI data locally in the TS repo
- When using PGD as an NPM module, the PokeAPI data is now fetched from GitHub for much faster performance and to reduce the number of PokeAPI calls
- Moved PokeApi methods into its own class
- Now fetches Gigantamax and primal forms
-  includeEstimatedPokemon is now an object with several props but will return everything if set to true for legacy users
- Adjusted some test values that needed to be updated

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "generate": "node -e 'require(\"./dist/index\").generate({ test: true })'",
+    "pokeapi": "node -e 'require(\"./dist/index\").generate({ test: true, pokeApi: true })'",
+    "raw": "node -e 'require(\"./dist/index\").generate({ test: true, raw: true })'",
     "test": "./node_modules/.bin/jest"
   },
   "repository": {
