--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pogo-data-generator",
-  "version": "1.3.9",
+  "version": "1.4.0",
   "description": "Pokemon GO project data generator",
   "author": "TurtIeSocks",
   "license": "Apache-2.0",
@@ -18,10 +18,10 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "generate": "node -e 'require(\"./dist/index\").generate({ test: true })'",
-    "pokeapi": "node -e 'require(\"./dist/index\").generate({ test: true, pokeApi: true })'",
-    "raw": "node -e 'require(\"./dist/index\").generate({ test: true, raw: true })'",
-    "invasions": "node -e 'require(\"./dist/index\").invasions({ test: true })'",
+    "generate": "ts-node devWrapper.ts --test",
+    "pokeapi": "ts-node devWrapper.ts --test --pokeapi",
+    "raw": "ts-node devWrapper.ts --test --raw",
+    "invasions": "ts-node devWrapper.ts --test --invasions",
     "test": "./node_modules/.bin/jest"
   },
   "repository": {
@@ -36,7 +36,9 @@
     "pogo-protos": "github:Furtif/pogo-protos"
   },
   "devDependencies": {
-    "@types/node-fetch": "^2.5.12",
-    "jest": "^27.4.7"
+    "@types/node-fetch": "^2.6.1",
+    "jest": "^27.4.7",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
