--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,4 +15,11 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
   },
+  "include": [
+    "./src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "devWrapper.ts"
+  ]
 }
