Catch Some Errors
- Do some extra error catching to prevent unnecessary logs when stuff is missing
- Add some extra time for tests to complete
- Also make sure that the ts is compiled before tests are ran

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pokeapi": "ts-node devWrapper.ts --test --pokeapi",
     "raw": "ts-node devWrapper.ts --test --raw",
     "invasions": "ts-node devWrapper.ts --test --invasions",
-    "test": "./node_modules/.bin/jest"
+    "test": "tsc && ./node_modules/.bin/jest"
   },
   "repository": {
     "type": "git",
