--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pogo-data-generator",
-  "version": "1.7.5",
+  "version": "1.8.0",
   "description": "Pokemon GO project data generator",
   "author": "TurtIeSocks",
   "license": "Apache-2.0",
@@ -34,15 +34,16 @@
     "url": "https://github.com/WatWowMap/Pogo-Data-Generator/issues"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7",
     "pogo-protos": "github:Furtif/pogo-protos"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "devDependencies": {
     "@types/node": "*",
-    "@types/node-fetch": "^2.6.1",
-    "jest": "^27.5.1",
-    "prettier": "^2.6.2",
-    "ts-node": "^10.5.0",
+    "jest": "^29.2.1",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.5"
   }
 }
