--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pogo-data-generator",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "description": "Pokemon GO project data generator",
   "author": "TurtIeSocks",
   "license": "Apache-2.0",
@@ -34,7 +34,7 @@
     "url": "https://github.com/WatWowMap/Pogo-Data-Generator/issues"
   },
   "dependencies": {
-    "pogo-protos": "github:Furtif/pogo-protos"
+    "pogo-protos": "github:Furtif/pogo-protos#c080222"
   },
   "engines": {
     "node": ">=18.0.0"
