--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pogo-data-generator",
-  "version": "1.11.3",
+  "version": "1.12.0",
   "description": "Pokemon GO project data generator",
   "author": "TurtIeSocks",
   "license": "Apache-2.0",
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "node-fetch": "2.6.7",
-    "pogo-protos": "github:Furtif/pogo-protos"
+    "pogo-protos": "npm:@na-ji/pogo-protos@<3.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
