--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "url": "https://github.com/WatWowMap/Pogo-Data-Generator/issues"
   },
   "dependencies": {
-    "node-fetch": "2.6.7",
-    "@na-ji/pogo-protos": "<3.0.0"
+    "@na-ji/pogo-protos": "<3.0.0",
+    "node-fetch": "2.6.7"
   },
   "engines": {
     "node": ">=16.0.0"
