--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pogo-data-generator",
-  "version": "1.13.0",
+  "version": "1.14.0",
   "description": "Pokemon GO project data generator",
   "author": "TurtIeSocks",
   "license": "Apache-2.0",
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@na-ji/pogo-protos": "<3.0.0",
+    "jszip": "^3.10.1",
     "node-fetch": "2.6.7"
   },
   "engines": {
