--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pogo-data-generator",
-  "version": "1.16.9",
+  "version": "1.16.10",
   "description": "Pokemon GO project data generator",
   "author": "TurtIeSocks",
   "license": "Apache-2.0",
@@ -42,6 +42,12 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "trailingComma": "all",
+    "semi": false,
+    "singleQuote": true
   },
   "devDependencies": {
     "@types/node": "*",
