--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   },
   "dependencies": {
     "@na-ji/pogo-protos": "<3.0.0",
-    "jszip": "^3.10.1",
-    "node-fetch": "2.6.7"
+    "jszip": "^3.10.1"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -50,11 +49,12 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@types/node": "*",
-    "@types/node-fetch": "^2.6.2",
     "jest": "^29.2.1",
-    "prettier": "^2.7.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.5.5"
+    "@biomejs/biome": "2.3.9",
+    "@types/node": "^24",
+    "jest": "^30.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
