chore: swap to biome formatter

--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "raw": "ts-node devWrapper.ts --test --raw",
     "invasions": "ts-node devWrapper.ts --test --invasions",
     "test": "tsc && ./node_modules/.bin/jest",
-    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "publishBuild": "rm -r dist && tsc",
-    "prettier": "prettier --write \"**/*.ts\""
+    "format": "biome format --write ./src/**/*.ts",
+    "publishBuild": "rm -r dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -40,17 +39,9 @@
     "jszip": "^3.10.1"
   },
   "engines": {
-    "node": ">=16.0.0"
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "trailingComma": "all",
-    "semi": false,
-    "singleQuote": true
+    "node": ">=21.0.0"
   },
   "devDependencies": {
-    "jest": "^29.2.1",
-    "typescript": "^4.5.5"
     "@biomejs/biome": "2.3.9",
     "@types/node": "^24",
     "jest": "^30.2.0",
